# Parcial1_Backend

./: .dockerignore  .env.example  .env.railway  .env.railway.example  .gitignore  0.15.0+cpu  1.24.0  10.0.0  2.0.0+cpu  2.31.0  BACKEND_LIMPIO.md  CONFIGURACION_NETLIFY.txt  CU05_Environment.postman_environment.json  CU05_Viviendas_Postman_Collection.json  DOCKER_SECURITY.md  DOCUMENTACION_ENTRENAMIENTO_IA.md  ENDPOINTS_ACTIVIDAD_IMPLEMENTADOS.md  ERRORES_CORREGIDOS_LOGS.md  ESPECIFICACIONES_FRONTEND_COMPLETAS.txt  GUIA_GESTION_USUARIOS.txt  GUIA_LOGIN_FRONTEND.txt  GUIA_POBLACION_SISTEMA.txt  GUIA_POBLAR_VIVIENDAS.txt  GUÍA_FLUJO_IMAGENES_PROPIETARIO.txt  INSTRUCCIONES_DEPLOYMENT.md  NUMEROS_VIVIENDAS_20250930_015500.txt  NUMEROS_VIVIENDAS_PRUEBAS.txt  OPTIMIZACIONES_RECONOCIMIENTO.md  POSTMAN_TESTING_GUIDE.md  Procfile  RAILWAY_DEPLOYMENT_GUIDE.md  README.md  REPORTE_USUARIOS_VIVIENDAS_20250930_010122.txt  REPORTE_USUARIOS_VIVIENDAS_20250930_011103.txt  REPORTE_USUARIOS_VIVIENDAS_20250930_012905.txt  REPORTE_USUARIOS_VIVIENDAS_20250930_014129.txt  REPORTE_USUARIOS_VIVIENDAS_20250930_014410.txt  REPORTE_USUARIOS_VIVIENDAS_20250930_014433.txt  RESPUESTAS_FRONTEND_DIAGNOSTICO.txt  RESPUESTAS_FRONTEND_LOGIN.txt  (+202 more)
areas_comunes/: serializers.py  urls.py  views.py
authz/: MEJORAS_IMPLEMENTADAS.md  auth_urls.py  email_service.py  jwt_views.py  models.py  models_backup.py  permissions.py  serializers.py  serializers_familiares.py  serializers_propietario.py  serializers_solicitud_dropbox.py  tests.py  tests_familiares.py  urls.py  urls_admin.py  urls_familiares.py  views.py  (+16 more)
(+238 files in other folders)
